overflow fix on eearch and profile

--- a/edc-gear-starter/react-app/src/components/SearchResults/SearchRes.css
+++ b/edc-gear-starter/react-app/src/components/SearchResults/SearchRes.css
@@ -41,7 +41,7 @@
 #post-res {
     color: black;
     word-wrap: break-word;
-    max-width: 85% ;
+    max-width: 400px ;
 }
 
 #no-res-h5 {
